slight updates to local.conf, build for rpi4 by default

--- a/conf/local.conf
+++ b/conf/local.conf
@@ -1,4 +1,6 @@
-MACHINE ?= "beaglebone-yocto"
+# Default to using the "raspberrypi4" (SBC) machine. This can be overwridden by setting
+# the MACHINE environment variable.
+MACHINE ??= "raspberrypi4"
 
 BB_NUMBER_THREADS = "${USER_BB_NUMBER_THREADS}"
 PARALLEL_MAKE = "${USER_PARALLEL_MAKE}"
@@ -16,7 +18,17 @@ DISTRO_FEATURES:append = " wayland systemd pam"
 # Use systemd as the init manager instead of the default (sysvinit).
 INIT_MANAGER = "systemd"
 
+# NOTE: the following is an example. If you are wanting to actually build a custom image, create an image recipe and a machine
+# configuration in your own custom layer.
+
 # Extra packages to include in the image.
+#
+# This should give us just enough to:
+#
+# 1. Boot
+# 2. Connect to a network
+# 3. SSH into the device
+# 4. Run a Wayland compositor
 CORE_IMAGE_EXTRA_INSTALL += "\
     weston \
     weston-init \
@@ -24,22 +36,10 @@ CORE_IMAGE_EXTRA_INSTALL += "\
     wayland \
     wayland-utils \
     \
-    flutter-wayland-client \
-    packagegroup-flutter-test-apps \
-    \
-    flutter-io-aws-stress \
-    \
-    waveshare-dsi-i2c-touchscreen-rules \
-    waveshare-hdmi-touchscreen-rules \
-    \
-    i2c-tools \
-    \
     dhcpcd \
-    wireless-regdb-static \
-    iw \
     wpa-supplicant \
-    \
-    wifi-helper-gross \
+    wireless-regdb-static \
+    packagegroup-base-wifi \
     \
     openssh \
     ca-certificates \
