--- a/conf/bblayers.conf
+++ b/conf/bblayers.conf
@@ -9,4 +9,5 @@ BBLAYERS ?= " \
   ${REPO_ROOT}/poky/meta \
   ${REPO_ROOT}/poky/meta-poky \
   ${REPO_ROOT}/poky/meta-yocto-bsp \
+  ${REPO_ROOT}/meta-raspberrypi \
   "
