accept killswitch license for rpi

--- a/conf/local.conf
+++ b/conf/local.conf
@@ -1,3 +1,6 @@
+# Save disk space by removing work directories after a package is built.
+INHERIT += "rm_work"
+
 # Default to using the "raspberrypi4" (SBC) machine. This can be overwridden by setting
 # the MACHINE environment variable.
 MACHINE ??= "raspberrypi4"
@@ -20,6 +23,9 @@ INIT_MANAGER = "systemd"
 
 # NOTE: the following is an example. If you are wanting to actually build a custom image, create an image recipe and a machine
 # configuration in your own custom layer.
+
+# See https://meta-raspberrypi.readthedocs.io/en/latest/ipcompliance.html#linux-firmware-rpidistro.
+LICENSE_FLAGS_ACCEPTED = "synaptics-killswitch"
 
 # Extra packages to include in the image.
 #
