--- a/conf/local.conf
+++ b/conf/local.conf
@@ -16,10 +16,15 @@ DISTRO = "poky"
 DISTRO_FEATURES:remove = " x11"
 IMAGE_FEATURES:remove = " splash psplash"
 
+DISTRO_FEATURES:remove = " x11 sysvinit"
 DISTRO_FEATURES:append = " wayland systemd pam"
 
 # Use systemd as the init manager instead of the default (sysvinit).
 INIT_MANAGER = "systemd"
+SYSTEMD_DEFAULT_TARGET = "graphical.target"
+
+# Remove redundant image types.
+IMAGE_FSTYPES:remove = " tar.bz2 ext3 wic.bz2 wic.bmap mender.bmap sdimg.bmap"
 
 # NOTE: the following is an example. If you are wanting to actually build a custom image, create an image recipe and a machine
 # configuration in your own custom layer.
