--- a/conf/bblayers.conf
+++ b/conf/bblayers.conf
@@ -8,6 +8,10 @@ BBFILES ?= ""
 BBLAYERS ?= " \
   ${REPO_ROOT}/poky/meta \
   ${REPO_ROOT}/poky/meta-poky \
-  ${REPO_ROOT}/poky/meta-yocto-bsp \
+  ${REPO_ROOT}/meta-openembedded/meta-oe \
+  ${REPO_ROOT}/meta-openembedded/meta-python \
+  ${REPO_ROOT}/meta-openembedded/meta-multimedia \
   ${REPO_ROOT}/meta-raspberrypi \
+  ${REPO_ROOT}/meta-clang \
+  ${REPO_ROOT}/meta-flutter \
   "
