first pass at adding unleashed-grpc apps + services + packagegroup

--- a/conf/bblayers.conf
+++ b/conf/bblayers.conf
@@ -14,4 +14,5 @@ BBLAYERS ?= " \
   ${REPO_ROOT}/meta-raspberrypi \
   ${REPO_ROOT}/meta-clang \
   ${REPO_ROOT}/meta-flutter \
+  ${REPO_ROOT}/meta-machine-control \
   "
