--- a/conf/local.conf
+++ b/conf/local.conf
@@ -23,12 +23,6 @@ DISTRO_FEATURES:append = " wayland systemd pam"
 INIT_MANAGER = "systemd"
 SYSTEMD_DEFAULT_TARGET = "graphical.target"
 
-# Remove redundant image types.
-IMAGE_FSTYPES:remove = " tar.bz2 ext3 wic.bz2 wic.bmap mender.bmap sdimg.bmap"
-
-# NOTE: the following is an example. If you are wanting to actually build a custom image, create an image recipe and a machine
-# configuration in your own custom layer.
-
 # See https://meta-raspberrypi.readthedocs.io/en/latest/ipcompliance.html#linux-firmware-rpidistro.
 LICENSE_FLAGS_ACCEPTED = "synaptics-killswitch"
 
@@ -39,13 +33,18 @@ LICENSE_FLAGS_ACCEPTED = "synaptics-killswitch"
 # 1. Boot
 # 2. Connect to a network
 # 3. SSH into the device
-# 4. Run a Wayland compositor
+# 4. Run multiple Flutter applications
 CORE_IMAGE_EXTRA_INSTALL += "\
     weston \
     weston-init \
     \
     wayland \
     wayland-utils \
+    \
+    flutter-wayland-client \
+    flutter-pi \
+    \
+    packagegroup-flutter-unleashing-grpc \
     \
     dhcpcd \
     wpa-supplicant \
@@ -84,6 +83,9 @@ otg_mode=1\n\
 
 # Add .wic image support (i.e., decompressed .wic.gz).
 IMAGE_FSTYPES += "wic"
+
+# Remove redundant image types.
+IMAGE_FSTYPES:remove = " tar.bz2 ext3 wic.bz2 wic.bmap mender.bmap sdimg.bmap"
 
 #
 # Where to place downloads
