fix dart-define flag in unleashing-grpc class

--- a/conf/local.conf
+++ b/conf/local.conf
@@ -60,9 +60,6 @@ CORE_IMAGE_EXTRA_INSTALL += "\
 # Raspberry Pi 4-specific configs.
 #
 # See meta-raspberrypi/docs/extra-build-config.md for more details.
-ENABLE_UART = "1"
-ENABLE_I2C = "1"
-KERNEL_MODULE_AUTOLOAD:append = " i2c-dev i2c-bcm2708"
 HDMI_FORCE_HOTPLUG = "1"
 DISABLE_OVERSCAN = "1"
 BOOT_DELAY = "0"
@@ -72,14 +69,8 @@ MACHINE_FEATURES += " \
     vc4graphics \
 "
 
-RPI_EXTRA_CONFIG = "\n\
-# Auto-detect DSI displays \n\
-dtoverlay=vc4-kms-dsi-7inch \n\
-ignore_lcd=1 \n\
-dtoverlay=uart3 \n\
-dtoverlay=uart5 \n\
-otg_mode=1\n\
-"
+# Enable UART.
+ENABLE_UART = "1"
 
 # Add .wic image support (i.e., decompressed .wic.gz).
 IMAGE_FSTYPES += "wic"
