--- a/meta-machine-control/recipes-app/unleashing-grpc-frontend/files/unleashing-grpc-frontend.service
+++ b/meta-machine-control/recipes-app/unleashing-grpc-frontend/files/unleashing-grpc-frontend.service
@@ -1,5 +1,5 @@
 [Unit]
-Description=Employee User Interface
+Description=gRPC Machine Control frontend
 After=weston.service
 Wants=weston.service
 
