use our own wpa_supplicant configuration, specifically add wifi to poky distro features

--- a/conf/local.conf
+++ b/conf/local.conf
@@ -17,7 +17,7 @@ DISTRO_FEATURES:remove = " x11"
 IMAGE_FEATURES:remove = " splash psplash"
 
 DISTRO_FEATURES:remove = " x11 sysvinit"
-DISTRO_FEATURES:append = " wayland systemd pam"
+DISTRO_FEATURES:append = " wayland systemd pam wifi"
 
 # Use systemd as the init manager instead of the default (sysvinit).
 INIT_MANAGER = "systemd"
