use 'sh' for ip detection instead of 'bash' since it is not installed by default

--- a/meta-machine-control/recipes-app/unleashing-grpc-backend/files/unleashing-grpc-backend.service
+++ b/meta-machine-control/recipes-app/unleashing-grpc-backend/files/unleashing-grpc-backend.service
@@ -6,7 +6,7 @@ Requires=network.target
 
 [Service]
 Type=simple
-ExecStartPre=/bin/bash -c 'while ! ip addr show dev wlan0 | grep -q "inet 1*"; do sleep 1; done'
+ExecStartPre=/bin/sh -c 'while ! ip addr show dev wlan0 | grep "inet [0-9]"; do sleep 1; done'
 ExecStart=flutter-pi --release /usr/share/apps/backend/3.24.0/release/
 User=weston
 Group=weston
