pre-configure wifi network at build time

--- a/.envrc
+++ b/.envrc
@@ -7,6 +7,10 @@ elif [[ "$(uname)" == "Darwin" ]]; then
     NUM_PROCESSORS=$(sysctl -n hw.ncpu)
 fi
 
+# Export the following in your .userenv (git-ignored) to automatically connect to wifi on boot.
+# export NETWORK_SSID="your_ssid"
+# export NETWORK_PASSWORD="your_password"
+
 # Default number of bitbake threads and parallel 'make' tasks.
 #
 # NOTE: By default, we do not use all available cores for bitbake, as there is a possibility of 
